tests/fixtures/typeck/parameter_non_bool_condition.veyl
fn check(value: Int) {
    if value {
        print("bad");
    }
}
